Install AWX has been fixed

--- a/post-install/playbook/awx/install-awx-operator.yaml
+++ b/post-install/playbook/awx/install-awx-operator.yaml
@@ -719,7 +719,7 @@ spec:
           env:
             # Watch all namespaces (cluster-scoped).
             - name: WATCH_NAMESPACE
-              value: ""
+              value: "awx"
             - name: POD_NAME
               valueFrom:
                 fieldRef:
